Mayor Commit - Java and Gradle version configure README.md update and other mayor features re-arranged